fixed mic on iOS and minor styling fixes

--- a/public/css/modern.css
+++ b/public/css/modern.css
@@ -1180,7 +1180,7 @@
   font-size: 1.875em;
   font-weight: bold;
   box-sizing: border-box;
-  height: 14em;
+  height: 18em;
   padding-top: 4.5em;
   padding-bottom: 4.5em;
   text-align: center;
